--- a/Flamingo/Flamingo.csproj
+++ b/Flamingo/Flamingo.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CommonOperations.cs" />
     <Compile Include="FlamingoProperties.cs" />
     <Compile Include="FlamingoPropertiesCommand.cs" />
     <Compile Include="FlamingoPropertiesControl.xaml.cs">
