--- a/Flamingo/Flamingo.csproj
+++ b/Flamingo/Flamingo.csproj
@@ -77,11 +77,11 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="saxon9he, Version=9.9.1.7, Culture=neutral, PublicKeyToken=e1fdd002d5083fe6, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Saxonica\SaxonHE9.9N\bin\saxon9he.dll</HintPath>
+      <HintPath>References\saxon9he.dll</HintPath>
     </Reference>
     <Reference Include="saxon9he-api, Version=9.9.1.7, Culture=neutral, PublicKeyToken=e1fdd002d5083fe6, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Saxonica\SaxonHE9.9N\bin\saxon9he-api.dll</HintPath>
+      <HintPath>References\saxon9he-api.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
